Fixing workerDto classes